# DirectXHelper

./: .gitignore  CMakeLists.txt  README.md
include/: DirectXHelper.h
src/: DirectXHelper.cpp
test/: Test.cpp
